tests/ui/unit-struct.stderr
error: TypeStateBuilder does not support unit structs
 --> tests/ui/unit-struct.rs:5:1
  |
5 | struct UnitStruct;
  | ^^^^^^^^^^^^^^^^^^
